# MultiTaskingLearning_Seismic

./: .gitignore  MODEL_WORKFLOW_GUIDE.md  README.md  SETUP_GUIDE.md  interactive_train.py  pyproject.toml  requirements.txt  setup_env.sh
src/: main3_refine.py  utility.py
